@@ -106,7 +106,7 @@ See the release notes for details.
 <li><a href="#obj_string">RDB_obj_string</a>
 <li><a href="#obj_table">RDB_obj_table</a>
 <li><a href="#table_to_obj">RDB_table_to_obj</a>
-
+<li><a href="#obj_irep">RDB_obj_irep</a>
 </ul>
 
 <h3>Database functions</h3>
