@@ -42,8 +42,8 @@ _RDB_get_cat_type(const char *name, RDB_transaction *, RDB_type **typp);
 int
 _RDB_get_cat_rtype(const char *opname, RDB_transaction *, RDB_type **typp);
 
-char *
-_RDB_make_typestr(int argc, RDB_type *argtv[]);
+int
+_RDB_make_typesobj(int argc, RDB_type *argtv[], RDB_object *objp);
 
 int
 _RDB_get_cat_ro_op(const char *name, int argc, RDB_type *argtv[],
